src/styles/master.scss
@use './base' as *;
@use './colors' as *;

@import './reset.css';

/* Root Variables */
:root {

  /* Font Loading */
  --font-common: Arial, Helvetica, sans-serif;
  --font-code: monospace;

  &.fonts-loaded {
    --font-common: 'Source Sans 3', Arial, Helvetica, sans-serif;
    --font-code: 'Source Code Pro', monospace;
  
    @supports (font-variation-settings: normal) {
      --font-common: 'Source Sans 3 VF', 'Source Sans 3', Arial, Helvetica, sans-serif;
    }
  }

  /* Colors */
  --shade-50: #{$shade-50};
  --shade-100: #{$shade-100};
  --shade-200: #{$shade-200};
  --shade-300: #{$shade-300};
  --shade-400: #{$shade-400};
  --shade-500: #{$shade-500};
  --shade-600: #{$shade-600};
  --shade-700: #{$shade-700};
  --shade-800: #{$shade-800};
  --shade-900: #{$shade-900};

  --bg-start: #{$bg-light-start};
  --bg-end: #{$bg-light-end};
}

html {
  width: 100%;

  @include font-common(16pt);

  background: $bg-light-start;
  color: $shade-800;
  color: var(--shade-800);

  scroll-behavior: smooth;
}

body {
  display: flex;
  flex-flow: column nowrap;

  width: 100%;
  min-height: 100vh;

  position: relative;

  background: linear-gradient(175deg, var(--bg-start) 5%, var(--bg-end) 95%);
  background-attachment: fixed;
}

/* A11y hiding */
.hidden {
  position: absolute; 
  overflow: hidden; 
  clip: rect(0 0 0 0); 
  height: 1px;
  width: 1px; 
  margin: -1px;
  padding: 0;
  border: 0; 
}

.landscape {
  display: none;
}

.separator {
  display: block;

  position: relative;
  width: 100%;
  height: 2px;
  margin: 6px 0;
  
  color: inherit;
  background: currentColor;
  
  /* Caps */
  &::before, &::after {
    content: '';
    display: block;
    position: absolute;
    top: -3px;
    left: 0;
    width: 8px;
    height: 8px;

    background: inherit;
  }
  &::after {
    left: auto;
    right: 0;
  }

  &.separator-round {
    &::before, &::after {
      border-radius: 4px;
    }
  }
}

.page {
  width: 100%;
  min-height: 100vh;

  > .section-anchor {
    position: relative;
    top: -4rem;
  }
}

p:not(:last-child) {
  margin-bottom: 1em;
}

p {
  a, a:visited {
    display: inline-block;

    position: relative;
    z-index: 5;

    color: $shade-900;
    color: var(--shade-900);

    transition: color ease-in 0.3s;

    &::before {
      content: '';
      display: block;
      position: absolute;
      bottom: -2px;
      left: -2px;
      right: -2px;
      height: 1px;
      z-index: -1;

      background-color: var(--shade-200);

      transition: background ease-out 0.5s, height ease-in 0.2s;
    }

    &:hover {
      color: var(--shade-200);
      &::before {
        height: 1.5em;
        height: calc(1.5em - 4px);
        background-color: var(--shade-600);
      }
    }
  }
}

.intro-first {
  opacity: 0;
  animation: fadeIn 2s ease-in-out 1 forwards;
}

.intro-second {
  opacity: 0;
  animation: fadeIn 2s ease-out 1s 1 forwards;
}

@keyframes fadeIn {
  0% { opacity: 0; }
  100% { opacity: 1; }
}

@media screen and (prefers-color-scheme: 'dark') {
  :root {
    /* Dark mode just inverts everything */
    --shade-50: #{$shade-900};
    --shade-100: #{$shade-900};
    --shade-200: #{$shade-800};
    --shade-300: #{$shade-700};
    --shade-400: #{$shade-600};
    --shade-500: #{$shade-500};
    --shade-600: #{$shade-400};
    --shade-700: #{$shade-300};
    --shade-800: #{$shade-200};
    --shade-900: #{$shade-100};

    --bg-start: #{$bg-dark-start};
    --bg-end: #{$bg-dark-end};
  }
}

/* Landscape Switch */
@media screen and (min-width: 768px) and (orientation: landscape) {
  html {
    font-size: 18pt;
  }

  body {
    flex-flow: row nowrap;
    justify-content: space-around;
    align-items: center;


    .portrait {
      display: none;
    }

    .landscape {
      display: block;
    }
  }
}

